# quizgen-simple-gui

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
qgg/: common.py  handlers.py  project.py  question.py  server.py  static.py  util.py
qgg/cli/: server.py
qgg/static/: handler.py
qgg/static/css/: style.css
qgg/static/files/: index.html  question_test.html
qgg/static/files/css/: style.css
qgg/static/files/js/: question_test.js
qgg/static/js/modules/webui/: editor.js  project.js  render.js
qgg/util/: dirent.py  file.py
static/: index.html
static/css/: style.css
static/js/: api.js  main.js  render.js
static/js/modules/quizgen/: core.js  project.js
static/js/modules/webui/: base.js  common.js  editor.js  layout.js  project.js  render.js  util.js
